--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/MattAngelakos/startgg-region-compiler#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "mongodb": "^6.7.0"
   }
 }
