--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/MattAngelakos/startgg-region-compiler#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
-    "mongodb": "^6.7.0"
+    "mongodb": "^6.7.0",
+    "validator": "^13.12.0"
   }
 }
