--- a/dataInProgress/package.json
+++ b/dataInProgress/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "postcss css/tailwind.css -o public/build/tailwind.css"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,14 @@
   },
   "homepage": "https://github.com/MattAngelakos/startgg-region-compiler#readme",
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "mongodb": "^6.7.0",
+    "postcss-cli": "^11.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.4",
     "validator": "^13.12.0"
   }
 }
