--- a/server/package.json
+++ b/server/package.json
@@ -1,38 +1,34 @@
 {
-  "name": "server",
-  "version": "0.1.0",
-  "private": true,
+  "name": "start",
+  "version": "1.0.0",
+  "description": "MY PROJECT",
+  "main": "app.js",
+  "type": "module",
+  "scripts": {
+    "start": "node app.js",
+    "build": "postcss css/tailwind.css -o public/build/tailwind.css",
+    "build2": "cd client && npm install && npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MattAngelakos/startgg-region-compiler.git"
+  },
+  "author": "Matthew Angelakos",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MattAngelakos/startgg-region-compiler/issues"
+  },
+  "homepage": "https://github.com/MattAngelakos/startgg-region-compiler#readme",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.19",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.7.0",
+    "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "tailwindcss": "^3.4.4",
+    "validator": "^13.12.0"
   }
 }
