--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "test": "node app.js",
+    "start": "node server.js",
     "build": "postcss css/tailwind.css -o public/build/tailwind.css",
     "build2": "cd client && npm install && npm run build"
   },
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/MattAngelakos/startgg-region-compiler#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
