--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,13 @@
   "name": "start",
   "version": "1.0.0",
   "description": "MY PROJECT",
-  "main": "app.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "node app.js",
     "start": "node server.js",
-    "build": "postcss css/tailwind.css -o public/build/tailwind.css",
-    "build2": "cd client && npm install && npm run build"
+    "dev": "nodemon server",
+    "build": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
