--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,14 @@
   "proxy": "http://localhost:4000",
   "private": true,
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.1.0",
