--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,12 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
+    "react-map-interaction": "^2.1.0",
+    "react-quick-pinch-zoom": "^5.1.0",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-zoom-pan-pinch": "^3.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
