--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.7.0",
     "validator": "^13.12.0"
   },
