--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-collapsible": "^2.10.0",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
     "react-map-interaction": "^2.1.0",
